# nero-workcell

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: eye_in_hand_calibration.json  eye_to_hand_calibration.json
docs/: yolo_detector.md
src/nero_workcell/: __init__.py
src/nero_workcell/core/: __init__.py  nero_controller.py  object_follower.py  pid_controller.py  realsense_camera.py  yolo_detector.py
src/nero_workcell/eye_in_hand/: __init__.py  collect_data.py  config.json  eye_in_hand.py
src/nero_workcell/eye_to_hand/: collect_data.py  config.json  eye_to_hand.py
src/nero_workcell/tasks/: __init__.py  follow_static_target.py  object_follower.py  object_follower_3d.py
src/nero_workcell/utils/: __init__.py  common.py
tests/: test_nero_controller_real.py  test_realsense_camera.py  test_yolo_detector.py
tools/: get_realsense_serial.py  move_home.py  realsense_depth_check.py  yolo_coco_detector.py
