[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nero-workcell"
version = "0.1.0"
description = "Nero workcell toolkit for RealSense, calibration, and robot tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "pyrealsense2",
    "ultralytics",
    "python-can>3.3.4",
    "pyAgxArm @ git+https://github.com/agilexrobotics/pyAgxArm.git",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
